--- a/.htaccess
+++ b/.htaccess
@@ -19,11 +19,13 @@
     ExpiresByType image/png "access plus 1 month"
     ExpiresByType image/jpg "access plus 1 month"
     ExpiresByType image/jpeg "access plus 1 month"
+    ExpiresByType image/gif "access plus 1 month"
+    ExpiresByType image/svg+xml "access plus 1 month"
 </IfModule>
 
-# Cache control
+# Cache-Control headers
 <IfModule mod_headers.c>
-    <FilesMatch "\.(css|js|png|jpg|jpeg|gif|ico)$">
+    <FilesMatch "\.(css|js|png|jpg|jpeg|gif|svg)$">
         Header set Cache-Control "max-age=2592000, public"
     </FilesMatch>
 </IfModule>
